# SRT_LLM_translator

./: Cargo.toml  README.md  example.srt  translation.srt
src/: exec.rs  main.rs  parser.rs  srt_parser.rs  translator.rs
